[package]
name = "tomato"
version = "0.1.1"
authors = ["Junichi Kakisako <kilo.sw@gmail.com>"]
description = "Command line pomodoro timer."
readme = "README.md"
categories = ["command-line-utilities"]
homepage = "https://github.com/kironono/tomato"
repository = "https://github.com/kironono/tomato"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
console = "0.15.0"
indicatif = "0.16.2"
notify-rust = "4.5.4"
